<resources>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_name">请输入账号</string>
    <string name="hint_verfi">请输入验证码</string>
    <string name="name_not_null">请输入名称</string>
    <string name="nickname_not_null">昵称不能为空</string>
    <string name="pwd_not_null">请输入密码</string>
    <string name="web_login_desc">网页版%s登录确认</string>
    <string name="login_sure">确认登录</string>
    <string name="cancel_login">取消登录</string>
    <string name="login_title">欢迎登录%s</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_account_register">新用户？请</string>
    <string name="register">注册</string>
    <string name="register_app">欢迎注册%s</string>
    <string name="update_pwd">修改密码</string>
    <string name="get_verf_code">获取验证码</string>
    <string name="has_account">已有账号？请</string>
    <string name="login">登录</string>
    <string name="wk_login_search">搜索</string>
    <string name="choose_country">选择国家或地区</string>
    <string name="pwd_length_error">密码长度必须是6～16位</string>
    <string name="account_exist">该账号已存在</string>
    <string name="recapture">重新获取</string>
    <string name="wklogin_perfect_userinfo">完善个人资料</string>
    <string name="must_input_name">名字（必填）</string>
    <string name="wklogin_sure">确定</string>
    <string name="wklogin_upload_header">点击上传个人头像</string>
    <string name="wklogin_nickname">昵称</string>
    <string name="wklogin_must_upload_header">请上传个人头像</string>
    <string name="login_auth_desc">你正在一台新设备登录%s，需要进行安全验证，通过后下次无需验证。</string>
    <string name="phone_num">手机号：</string>
    <string name="start_auth">开始验证</string>
    <string name="login_auth">登录验证</string>
    <string name="send_code_desc">我们已给你的手机号码%s发送了一条验证短信</string>
    <string name="login_authing">登录验证中</string>
    <string name="other_device_login">您已在其他设备登录，请重新登录!</string>
    <string name="auth_phone">验证您的手机号</string>
    <string name="auth_phone_tips">%s会发送短信验证手机号码，请输入您的验证码</string>
    <string name="logging_in">登录中</string>
    <string name="wk_ban">您的账号已被封禁，如需解封请联系后台管理员</string>
    <string name="phone_notice_open">手机通知已开启</string>
    <string name="phone_notice_close">手机通知已关闭</string>
    <string name="phone_mute">手机静音</string>
    <string name="exit_pc_login">退出Web%s</string>
    <string name="pc_locking">锁定</string>
    <string name="pc_file">传文件</string>
    <string name="pc_login">Web %s已登录</string>
    <string name="sign_in_agree">我已阅读并同意</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="update_api">更改服务器地址</string>
    <string name="web_url">Web版网址</string>
    <string name="qr_scan_login">二维码扫描登录</string>
    <string name="web_side">%s网页端</string>
    <string name="web_scan_login_desc">请使用浏览器访问%s，然后扫描二维码登录。为了您更好的体验，建议使用谷歌浏览器。</string>
    <string name="copied">已复制</string>
    <string name="phone_error">手机号不合法</string>
    <string name="agree_auth_tips">请先阅读并同意《隐私政策》和《用户协议》</string>
    <string name="choose_login_type">—  第三方登录  —</string>
    <string name="update_api_ip">以http开头(如http://172.0.0.1:8090)</string>
    <string name="input_invite_code_must">请输入邀请码（必填）</string>
    <string name="input_invite_code_not_must">请输入邀请码（选填）</string>
    <string name="invite_code_not_null">邀请码不能为空</string>
    <string name="reset_base_url">重置</string>
    <string name="update_api_content">填写服务器地址，域名或IP+端口的方式，都必须是http开头。\n例：https://api.botgate.cn\n例：https://172.0.0.1:8090</string>
    <string name="update_new_password">请输入新密码</string>
    <string name="update_confirm_password">请确认新密码</string>
    <string name="update_pwd_error">确认密码输入错误</string>
</resources>
