<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/icon_login_bg" />

    <TextView
        android:id="@+id/loginTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/colorDark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">


            <LinearLayout
                android:id="@+id/chooseCodeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/codeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="+ 86"
                    android:textColor="@color/colorDark"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_login_arrow_bottom" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="#d8d8d8" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_name"
                android:inputType="phone"
                android:maxLength="20"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            style="@style/view_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pwdEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:button="@drawable/selector_account_relate_see_password"
                android:checked="false"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            style="@style/view_line"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:visibility="visible">

            <com.chat.base.ui.components.CheckBox
                android:id="@+id/checkbox"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/myTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sign_in_agree"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/privacyPolicyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/privacy_policy"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/userAgreementTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/user_agreement"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/buttonNormal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:text="@string/login"
            app:cornerRadius="@dimen/button_radian" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_13" />

            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorLine" />

            <TextView
                android:id="@+id/forgetPwdTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_13" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/baseUrlTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_api"
            android:textColor="@color/color999" />

        <TextView
            android:id="@+id/resetTv"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_base_url"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/otherView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />


</RelativeLayout>