<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sendCodeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/send_code_desc"
            android:textColor="@color/color999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/layoutColor"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/verfiEt"
                style="@style/edit_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/hint_verfi"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:textColor="@color/colorDark"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getVerfiCodeBtn"
                style="@style/buttonNormal"
                android:layout_width="wrap_content"
                android:text="@string/get_verf_code"
                android:textSize="@dimen/font_size_14"
                app:cornerRadius="@dimen/button_radian" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sureBtn"
            style="@style/buttonNormal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/sure"
            app:cornerRadius="@dimen/button_radian" />
    </LinearLayout>
</LinearLayout>